[package]

name = "po"
version = "0.1.0"
authors = ["Jordan Mulcahey <snhjordy@gmail.com>"]
description = "A Rust API and command-line notification pusher for the Pushover notification service"
keywords = ["Pushover", "push", "notification", "notifications", "messaging"]
readme = "README.md"
homepage = "https://github.com/unjordy/po"
repository = "https://github.com/unjordy/po"
license = "BSD-2-Clause"

[dependencies]
url = "0.2.23"
curl = "0.2.2"
docopt = "0.6.50"
rustc-serialize = "0.3.3"
regex = "0.1.19"
